Gestion message (#17)
* salem

* validation

* validation..

* validation.

---------

Co-authored-by: haythem <haythem.benmessaoud@esprit.tn>